desktop page complete

--- a/index.html
+++ b/index.html
@@ -28,18 +28,45 @@
 
     </div>
   </div>
-
-<!-- main body of page -->
-
-
-        <!-- examples of work done -->
-
-
-        <!-- philosphy and apointments -->
-
-
+  <!-- main body of page -->
+  <div class="sitecontainer mainbodycontainer">
+    <!-- examples of work done -->
+    <div class="offeringgallery">
+      <div class="galleryitem galleryexam">
+        <img class="exam" src="resources/paper-icon.png" alt="exam icon">
+        <span class="descrip-span exam-span">Comprehensive <br> Exams</span>
+      </div>
+      <div class="galleryitem galleryfitting">
+        <img class="fitting" src="resources/ruler-icon.png" alt="fitting icon">
+        <span class="descrip-span fitting-span">Custom <br>Fittings</span>
+      </div>
+      <div class="galleryitem gallerydelivery">
+        <img class="delivery" src="resources/truck-icon.png" alt="delivery icon">
+        <span class="descrip-span delivery-span">Fast <br>Delivery</span>
+      </div>
+    </div>
+    <!-- philosphy and apointments -->
+    <div class="philosphygallery">
+      <div class="philosphycontainer">
+        <span class="philosphyspan">PHILOSPHY</span>
+        <span class="philosphy">Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</span>
+      </div>
+      <div class="apointmentscontiner">
+        <span class="apointmentspan">APOINTMENTS</span>
+        <span class="apointments">Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</span>
+      </div>
+    </div>
+  </div>
+  <!-- end of main body div -->
+</div>
 <!-- footer and copywrite -->
 
+<div class="sitecontainer footercontainer">
+  <div class="logocopy">
+    <img class="logofooter" src="resources/logo-black.png" alt="Company Logo">
+    <span class="copyright">Copyright Tortoiseshell Optics</span>
+  </div>
+</div>
 
-  </body>
+</body>
 </html>
