mobile responsive 630px

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <span class="navspan">Services</span>
           <span class="navspan">Products</span>
           <span class="navspan">Contacts</span>
+          <span class="navspan menu">Menu</span>
         </div>
       </div>
       <div class="slogancontainer">
